istio-teaching/release/whole/ef-part-bluegreen-argo-rollouts.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-v1
spec:
  workloadSelector:
    labels:
      line: front-v1
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "header_key":"version",
                    "header_value":"v1"
                  }
              root_id: version_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/request_header.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: version_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-v2
spec:
  workloadSelector:
    labels:
      line: front-v2
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "header_key":"version",
                    "header_value":"v2"
                  }
              root_id: version_v2
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/request_header.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: version_v2

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-v1-checkoutservice
spec:
  workloadSelector:
    labels:
      app: checkoutservice
      version: v1
      line: v1
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "header_key":"version",
                    "header_value":"v1"
                  }
              root_id: version_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/request_header.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: version_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-v2-checkoutservice
spec:
  workloadSelector:
    labels:
      app: checkoutservice
      version: v1
      line: v2
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "header_key":"version",
                    "header_value":"v2"
                  }
              root_id: version_v2
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/request_header.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: version_v2

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-v1-emailservice
spec:
  workloadSelector:
    labels:
      app: emailservice
      version: v1
      line: v1 
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-recommendationservice
spec:
  workloadSelector:
    labels:
      app: recommendationservice
      version: v1
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-paymentservice
spec:
  workloadSelector:
    labels:
      app: paymentservice
      version: v1
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-v1-productcatalogservice
spec:
  workloadSelector:
    labels:
      app: productcatalogservice
      version: v1
      line: v1 
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-v1-cartservice
spec:
  workloadSelector:
    labels:
      app: cartservice
      version: v1
      line: v1 
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-v1-currencyservice
spec:
  workloadSelector:
    labels:
      app: currencyservice
      version: v1
      line: v1 
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-v1-shippingservice
spec:
  workloadSelector:
    labels:
      app: shippingservice
      version: v1
      line: v1 
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-v1-redis-cart
spec:
  workloadSelector:
    labels:
      app: redis-cart
      version: v1
      line: v1 
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-header-line-v1-adservice
spec:
  workloadSelector:
    labels:
      app: adservice
      version: v1
      line: v1 
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    
                  }
              root_id: inbound_v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-2/inbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.stats
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration:
                '@type': type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                  }
              root_id: outbound-v1
              vm_config:
                allow_precompiled: true
                code:
                  local:
                    filename: /var/local/lib/wasm-filters-3/outbound.wasm
                runtime: envoy.wasm.runtime.v8
                vm_id: inbound_outbound_v1
---
